plang/testing/logs/false-incorrect/13/program13.p.p
i N5V.
j (n qt8gH (K8)) ml (n (nZytN (oF (bhhpc d fdU Kq)) (UzJ))) :- a (p (YZPLL) (enQ5Q (IkPp) (Kp) (Hz))) (zWru) (mZC (n9Tza)) (YQYJ).


xa (x3hZC (oy (SqYoq))).
? (g (RQRz) Avy4 B (wnte nPLIA bCZ (C5x) WR); z9 (gE (a OsMEw)) (kf Qwtty k2), p4A7, (bN (jPV uqVtH n (FfBd))); (po w17Em (E) (e9e) K); k).



